VNCViewer - fix an issue where the speed dial backdrop is not shown because of incorrect z-index

--- a/client/src/interface/pages/VNCViewer/index.css
+++ b/client/src/interface/pages/VNCViewer/index.css
@@ -24,6 +24,10 @@
     right: 0
 }
 
+#speed-dial-backdrop {
+    z-index: 1;
+}
+
 #auto-resize-tooltip-title {
     width: 94px;
 }
